[gd_scene load_steps=5 format=3 uid="uid://buiqh77we773m"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://caelfigvrg7h8" path="res://Sprites/enemy1.png" id="2"]
[ext_resource type="Script" path="res://scenes/DirectionTimer.gd" id="3_pw7ye"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1k7v"]
size = Vector2(176, 132)

[node name="Enemy" type="Node2D"]
position = Vector2(200, 129)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-8, 2)
shape = SubResource("RectangleShape2D_q1k7v")

[node name="Enemy" type="CharacterBody2D" parent="Area2D"]
script = ExtResource("1")

[node name="EnemySprite" type="Sprite2D" parent="Area2D/Enemy"]
texture = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/Enemy"]
position = Vector2(-8, 2)
shape = SubResource("RectangleShape2D_q1k7v")

[node name="DirectionTimer" type="Timer" parent="."]
one_shot = true
script = ExtResource("3_pw7ye")

[connection signal="timeout" from="DirectionTimer" to="Area2D/Enemy" method="_on_direction_timer_timeout"]
